nebulosa/loki/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: loki-web
  namespace: observability
spec:
  parentRefs:
    - name: nebulosa-internal
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - loki.internal.cloudhaven.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: loki
          port: 3100
